[gd_scene load_steps=7 format=3 uid="uid://upgrade_effect_vfx"]

[ext_resource type="Script" path="res://scenes/vfx/UpgradeResultEffect.gd" id="1_script"]

[sub_resource type="Gradient" id="Gradient_glow"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_glow"]
gradient = SubResource("Gradient_glow")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_add"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_light"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_light"]
gradient = SubResource("Gradient_light")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="UpgradeResult" type="Node2D"]
script = ExtResource("1_script")

[node name="FrameGlow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_add")
scale = Vector2(0.9, 0.9)
texture = SubResource("GradientTexture2D_glow")

[node name="ItemFrame" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1

[node name="ItemIcon" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="FlashLight" type="PointLight2D" parent="."]
energy = 0.0
texture = SubResource("GradientTexture2D_light")
texture_scale = 2.0

[node name="RingParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.35
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 180.0
initial_velocity_max = 180.0
scale_amount_min = 4.0
scale_amount_max = 4.0
color = Color(1, 0.847059, 0.290196, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
